# GLEngine

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Content/Engine/materials/: M_Decal.mat
Content/Engine/model/: arrow.fbx  monkey.fbx  plane.fbx
Content/Engine/scenes/: Default.scene
Content/Engine/shaders/: BloomUpsample.glsl  BlurY.glsl  CustomDepth.glsl  DefaultLit.glsl  DeferredLight.glsl  DownSample.glsl  ErrorShader.glsl  SSAO.glsl  SSAO_Blur.glsl  ShadowCasterGlobal.glsl  ShowColor.glsl  brdf.glsl  prefilter.glsl
Content/Engine/shaders/Internal/: Billboard.glsl  BloomSetup.glsl  BlurX.glsl  Copy.glsl  EquirectMap.glsl  ErrorShader.glsl  SSAO.glsl  SSAO_Blur.glsl  ShadowCasterLocal.glsl  SkyBox.glsl  Tonemap.glsl  irradiance.glsl
Content/Engine/shaders/include/: BRDF.glsl  Core.glsl  EndfieldForwardPass.glsl  EndfieldLibrary.glsl  Functions.glsl  GLInput.glsl  Light.glsl  LightInput.glsl  Lighting.glsl  OceanWave.glsl  Shadow.glsl  Surface.glsl  Transform.glsl
Content/Project/ComputeShader/: ComputeShader.glsl
Content/Project/Endfield/: EndfieldTestScene.scene
Content/Project/Endfield/Material/: M_Endfield_Ground.mat  M_Perlica_EyeLash.mat  M_Perlica_Leg.mat  M_Perlica_Outfit.mat  M_Perlica_Skin.mat  M_Perlica_Skirt.mat  M_Perlica_eye.mat  M_Perlica_face.mat  M_Perlica_hair.mat
Content/Project/Endfield/Model/: EyeLashL.fbx  EyeLashR.fbx  Perlica_eyeLash.fbx  Perlica_skin.fbx
Content/Project/Endfield/Perlica/Material/: M_Perlica.mat  m_perlica_eye.mat  m_perlica_face.mat  m_perlica_hair.mat  m_perlica_skin.mat  m_perlica_skirt.mat
Content/Project/Endfield/Perlica/Model/: Leg.fbx  Outfit.fbx  Perlica_eye.fbx  Perlica_face.fbx  Perlica_hair.fbx  Perlica_skirt.fbx
Content/Project/Endfield/Perlica/Shader/: Endfield.glsl
Content/Project/Endfield/Perlica/scene/: Perlica.scene  PerlicaScene.scene
Content/Project/Endfield/Shader/: EndfieldDefault.glsl  EndfieldDefrredLight.glsl  EndfieldEyeLash.glsl  EndfieldScene.glsl  EndfieldShadow.glsl  EndfieldSkin.glsl
Content/Project/Endfield/Shader/include/: EndfieldDefrredPass.glsl  EndfieldForwardPass.glsl  EndfieldOutLinePass.glsl  EndfieldPBR.glsl
Content/Project/GPUGems/GPUGems1/Water/: Water.glsl  Water.mat  WaterRender.scene
Content/Project/YYSLS/Char/Material/: m_yysls.mat
Content/Project/YYSLS/Char/Model/: Head.fbx
Content/Project/YYSLS/Char/Shader/: YYSLS_Char.glsl
Content/Project/hdr/: glasshouse_interior_1k.hdr
Content/Project/materials/: M_Floor.mat  M_HuLi.mat  M_HuLi_Fur.mat  m_SinWave.mat  m_flowMap.mat  m_water.mat
Content/Project/models/: HuLi.fbx  PlaneHighRes.fbx
Content/Project/scenes/: M_FurBody.mat  MultiPassFur.scene  WaterRender.scene
Content/Project/shaders/: FlowMap.glsl  MultiPassFur.glsl  OnePassFur.glsl  SinWave.glsl  Translucene.glsl  Unlit.glsl  Volume.glsl  Water.glsl
cmake/toolchain/: clang-windows.cmake
resources/: app.rc  version.h
scripts/: build.ps1  clean.ps1  run.ps1
src/: main.cpp
src/Engine/Asset/: AssetDatabase.cpp  AssetDatabase.h  AssetManager.cpp  AssetManager.h  AssetPaths.cpp  AssetPaths.h  LoaderManager.cpp  LoaderManager.h
src/Engine/Asset/Types/: ComputeShader.cpp  ComputeShader.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderQueue.cpp  RenderQueue.h  Shader.cpp  Shader.h  ShaderPass.cpp  ShaderPass.h  ShaderTags.cpp  ShaderTags.h
src/Engine/Asset/Types/Texture/: IBLImage.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  Texture2DArray.cpp  Texture2DArray.h  TextureCube.cpp  TextureCube.h  TextureCubeArray.cpp  TextureCubeArray.h
src/Engine/Core/: Config.cpp  Config.h  Gui.cpp  Gui.h  LightingConvention.h  Log.cpp  Log.h  RenderDocSupport.cpp  RenderDocSupport.h  Window.cpp  Window.h  util.cpp  util.h
src/Engine/Entity/: DrawSetting.cpp  DrawSetting.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  RenderUnitFilter.cpp  RenderUnitFilter.h
src/Engine/Entity/Components/: Camera.cpp  Camera.h  Component.cpp  Component.h  Light.cpp  Light.h  MeshRender.cpp  MeshRender.h  Ocean.cpp  Ocean.h  SkyBox.cpp  SkyBox.h  Transform.cpp  Transform.h
src/Engine/Entity/Components/light/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  LocalLight.cpp  LocalLight.h  PointLight.cpp  PointLight.h  SkyBox.cpp  SkyBox.h  SpotLight.cpp  SpotLight.h
src/Engine/Renderer/: AmbientOcclusion.h  CubemapBaker.cpp  CubemapBaker.h  DrawBatch.cpp  DrawBatch.h  FramebufferBinding.cpp  FramebufferBinding.h  FramebufferDesc.cpp  FramebufferDesc.h  InstanceBuffer.cpp  InstanceBuffer.h  RenderBuffer.cpp  RenderBuffer.h  RenderContext.cpp  RenderContext.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  UniformBuffer.cpp  UniformBuffer.h
src/Engine/Renderer/RenderPipeline/: DeferredPlusRender.cpp  DeferredPlusRender.h  DeferredRender.cpp  DeferredRender.h  EndfieldPipeline.cpp  EndfieldPipeline.h  EndfieldRenderPipeline.cpp  EndfieldRenderPipeline.h  ForwardRender.cpp  ForwardRender.h  RenderPipeline.cpp  RenderPipeline.h  RenderPipelineRegistry.cpp  RenderPipelineRegistry.h
src/Engine/Scene/: SceneSerializer.cpp  SceneSerializer.h  SceneSession.cpp  SceneSession.h
